# sicsic_assignments

./: README.md
Assignment 1 - CPP/: Menu.cpp  Menu.h  MyQueue.cpp  MyQueue.h  Stack.cpp  Stack.h  StackNode.cpp  StackNode.h  assignment1.cpp
Assignment 2 - CPP/: .gitignore
Assignment 2 - CPP/Coding/: Customer.cpp  Customer.h  Menu.cpp  Menu.h  Product.cpp  (+5 more)
Assignment 3 - CPP/: .gitignore  Circle.cpp  OrthogonalTriangle.cpp  Shape.cpp
sicsic_c_1/: .gitignore  CMakeLists.txt  PROBLEM WITH THE CODE.txt  REVIEW_NOTES.txt  run_stimuli.sh
sicsic_c_1/.claude/: settings.local.json
sicsic_c_1/assignment_details/: README.md  ex1_template.c  exe_mac  input.txt  instructions.txt  output.txt
sicsic_c_1/code/: 206004095_211571948.c  actual_output.txt  main  main.c  mismatches.txt  run  tester  tester.c
sicsic_c_1/stimuli/test_01_basic/: actual.txt  diff.txt  expected.txt  input.txt
sicsic_c_1/stimuli/test_02_five_errors/: actual.txt  diff.txt  input.txt
sicsic_c_1/stimuli/test_03_palindromes/: actual.txt  diff.txt  expected.txt  input.txt
sicsic_c_1/stimuli/test_04_all_sorts/: actual.txt  diff.txt  expected.txt  input.txt
sicsic_c_1/stimuli/test_05_max_stocks/: actual.txt  diff.txt  expected.txt  input.txt
sicsic_c_1/stimuli/test_06_drop_zero/: actual.txt  diff.txt  expected.txt  input.txt
sicsic_c_1/stimuli/test_07_drop_hundred/: actual.txt  diff.txt  expected.txt  input.txt
sicsic_c_1/stimuli/test_08_error_reset/: actual.txt  diff.txt  expected.txt  input.txt
sicsic_c_1/stimuli/test_10_single_stock/: actual.txt  diff.txt  expected.txt  input.txt
sicsic_c_2/: .gitignore  CMakeLists.txt
(+25 files in other folders)
